<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OverworldActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/gridLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Grid items will be added dynamically from Java code -->

            </LinearLayout>

        </HorizontalScrollView>

    </ScrollView>

    <ImageView
        android:id="@+id/gifImageView"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/collectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Collect"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/bottom_layout" />

    <Button
        android:id="@+id/moveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Move base to current position"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/bottom_layout" />

    <Button
        android:id="@+id/fightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/bottom_layout" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go back to base"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/bottom_layout" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/arrow_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="↑"
            android:onClick="moveUp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="↓"
            android:onClick="moveDown"
            android:layout_below="@id/arrow_up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="←"
            android:onClick="moveLeft"
            android:layout_toLeftOf="@id/arrow_up"
            android:layout_marginRight="8dp"/>

        <Button
            android:id="@+id/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="→"
            android:onClick="moveRight"
            android:layout_toRightOf="@id/arrow_up"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/WoodAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@id/arrow_left"/>

        <TextView
            android:id="@+id/StoneAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@id/WoodAmount"/>

        <TextView
            android:id="@+id/PowerLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@id/StoneAmount"/>

    </RelativeLayout>
</RelativeLayout>
