<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundGif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true" />

    <!-- Back Button -->
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="Back" />

    <!-- Troop Management Title -->
    <TextView
        android:id="@+id/troopManagementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Troop Management"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/backButton"/>

    <!-- Total Troops Section -->
    <TextView
        android:id="@+id/totalTroopsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Troops"
        android:textColor="@color/white"
        android:layout_below="@id/troopManagementTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/troopTypesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalTroopsLabel"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Archers: "
            android:textColor="@color/white"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/archersCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Knights: "
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/knightsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mages: "
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/magesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cavalry: "
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/cavalryCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <!-- Food Remaining Section -->
    <TextView
        android:id="@+id/foodRemainingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Food Remaining"
        android:textColor="@color/white"
        android:layout_below="@id/troopTypesLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/foodRemainingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1000"
        android:textColor="@color/white"
        android:layout_below="@id/foodRemainingLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <!-- Train Troops Section -->
    <TextView
        android:id="@+id/trainTroopsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Train Troops"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@id/foodRemainingCount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <!-- Checkboxes for troops -->
    <LinearLayout
        android:id="@+id/checkboxesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/trainTroopsLabel"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <CheckBox
            android:id="@+id/archersCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Archers"/>

        <CheckBox
            android:id="@+id/knightsCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Knights"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"/>

        <CheckBox
            android:id="@+id/magesCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mages"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"/>

        <CheckBox
            android:id="@+id/cavalryCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cavalry"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/troopsToTrainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Troops to be Trained:"
        android:textColor="@color/white"
        android:layout_below="@id/checkboxesLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <!-- Troops to be trained -->
    <LinearLayout
        android:id="@+id/troopsToTrainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/troopsToTrainLabel"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <!-- Labels for troop types to be trained -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Archers:"/>

        <TextView
            android:id="@+id/archersToTrainCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Knights:"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/knightsToTrainCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mages:"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/magesToTrainCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cavalry:"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/cavalryToTrainCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <!-- Buttons to train troops -->
    <LinearLayout
        android:id="@+id/trainingButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/troopsToTrainLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/trainOneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+1"/>

        <Button
            android:id="@+id/trainTenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+10"
            android:layout_marginStart="16dp"/>

        <Button
            android:id="@+id/trainFiftyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+50"
            android:layout_marginStart="16dp"/>

        <Button
            android:id="@+id/trainHundredButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+100"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <!-- Warning for food -->
    <TextView
        android:id="@+id/trainingWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Beware: Training a lot of troops will take up more food"
        android:layout_below="@id/trainingButtonsLayout"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/trainingTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Training Time:"
        android:textColor="@color/white"
        android:layout_below="@id/trainingWarning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/trainingTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 minutes"
        android:textColor="@color/white"
        android:layout_below="@id/trainingTimeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/confirmTrainingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm Training"
        android:layout_below="@id/trainingTimeValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

</RelativeLayout>