...
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:src="@drawable/signout" />

    <ImageView
        android:id="@+id/troopManagementButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="475dp"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:focusable="false"
...
